coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__attachment_chips.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCODE v0.1.1                                                         
 │●│ │●│  opus-4  *  auto                                                       
 ╰─╯ ╰─╯  /repo                                                                 
                                                                                
❯ read utils/foo/bar.rs                                                         
                                                                                
● Read(utils/foo/bar.rs · lines 1-3)                                            
  └ 1  fn foo() {}                                                              
    2                                                                           
    3  // done                                                                  
                                                                                
◆ memory · utils/foo/CLAUDE.md                                                  
                                                                                
  └ Read utils/foo/bar.rs (3 lines)                                             
                                                                                
⏺ Here is the file.                                                             
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto * ctrl+t to cycle | ctx -- | →1 ←2 · tool 1                      
 ⏯ manual mode on · shift+tab to cycle | repo
