coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__help_modal@linux.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
                                                                                
            ┌ Help ────────────────────────────────────────────────┐            
            │Cursor & history                                      │            
            │Ctrl+A             Move to beginning of line          │            
            │Ctrl+E             Move to end of line                │            
            │←                  Move one character left            │            
            │Ctrl+F             Move one character right           │            
            │Alt+B              Move one word left                 │            
            │Alt+F              Move one word right                │            
            │↑                  Walk through prompt history (up /  │            
            │down)                                                 │            
            │                                                      │            
            │Editing                                               │            
            │Backspace          Delete character before cursor     │            
            │Delete             Delete character at cursor         │            
            │Ctrl+W             Delete the previous word           │            
            │Ctrl+Delete        Delete the next word               │            
            │Ctrl+K             Kill text from cursor to end of    │            
            │line                                                  │            
────────────│Ctrl+U             Kill text from beginning of line to│────────────
❯           │cursor                                                │            
────────────│Shift+Enter        Insert a newline (multi-line input)│────────────
 opus-4 * au└──────────────────────────────────────────────────────┘←0          
 ⏯ ask mode on · shift+tab to cycle
