coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__model_fallback_banner.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCODE v0.1.1                                                         
 │●│ │●│  sonnet-4-6  *  auto                                                   
 ╰─╯ ╰─╯                                                                        
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
 sonnet-4-6 * auto * ctrl+t to cycle | ↑0 ↓0 · cache 0/0% | ctx -- | →0 ←0      
 ⏯ ask mode on · shift+tab to cycle
