coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__tests__parallel_tool_batch.snap
---
source: app/tui/src/widgets/mod.test.rs
expression: output
---
 ╭─╮ ╭─╮  COCODE v0.1.1                                                         
 │●│ │●│  opus-4  *  auto                                                       
 ╰─╯ ╰─╯                                                                        
                                                                                
❯ Investigate                                                                   
                                                                                
────────────────────────────────────────────────────────────────────────────────
❯                                                                               
────────────────────────────────────────────────────────────────────────────────
 opus-4 * auto * ctrl+t to cycle | ctx -- | →1 ←3                               
 ⏯ manual mode on · shift+tab to cycle
